--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,15 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.16)
 project(DNSResolver LANGUAGES CXX)
 
 # -------------------------------------------------------------------
 # CONFIGURAÇÕES GERAIS
 # -------------------------------------------------------------------
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS ON)  # usa gnu++17 (permite getopt, etc.)
+set(CMAKE_CXX_EXTENSIONS ON)
 
-# Habilita warnings
 add_compile_options(-Wall -Wextra -Wpedantic)
 
-# Ativa otimização em builds Release
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug)
 endif()
@@ -21,14 +19,13 @@ endif()
 # -------------------------------------------------------------------
 # Busca todos os .cpp dentro de src/
 file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS
-     src/*.cpp)
+    src/*.cpp)
 
 # -------------------------------------------------------------------
 # ADICIONA EXECUTÁVEL PRINCIPAL
 # -------------------------------------------------------------------
 add_executable(resolver ${SRC_FILES})
 
-# Inclui diretórios de cabeçalhos (para que #include "cli/arguments.h" funcione)
 target_include_directories(resolver PRIVATE
     ${CMAKE_SOURCE_DIR}/src
     ${CMAKE_SOURCE_DIR}/src/cli
@@ -41,12 +38,9 @@ target_include_directories(resolver PRIVATE
 # -------------------------------------------------------------------
 # LINKA DEPENDÊNCIAS OPCIONAIS (OpenSSL, Threads, etc.)
 # -------------------------------------------------------------------
-
-# Threads (para std::thread, mutex, etc.)
 find_package(Threads REQUIRED)
 target_link_libraries(resolver PRIVATE Threads::Threads)
 
-# mbedTLS
 find_library(MBEDTLS_LIB mbedtls)
 find_library(MBEDX509_LIB mbedx509)
 find_library(MBEDCRYPTO_LIB mbedcrypto)
@@ -57,6 +51,7 @@ if(MBEDTLS_LIB AND MBEDX509_LIB AND MBEDCRYPTO_LIB)
 else()
     message(FATAL_ERROR "mbedTLS not found. Por favor instale-o.")
 endif()
+
 # -------------------------------------------------------------------
 # MENSAGENS DE CONFIGURAÇÃO
 # -------------------------------------------------------------------
